style: apply automated lint fixes

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -45,8 +45,10 @@
   --toolbar-icon-bg-color: light-dark(rgb(0 0 0), rgb(255 255 255));
   --toolbar-icon-hover-bg-color: light-dark(rgb(0 0 0), rgb(255 255 255));
 
-  --sidebar-narrow-bg-color: light-dark(rgb(212 212 215 / 0.9),
-      rgb(42 42 46 / 0.9));
+  --sidebar-narrow-bg-color: light-dark(
+    rgb(212 212 215 / 0.9),
+    rgb(42 42 46 / 0.9)
+  );
   --sidebar-toolbar-bg-color: light-dark(rgb(245 246 247), rgb(50 50 52));
   --toolbar-bg-color: light-dark(rgb(249 249 250), rgb(56 56 61));
   --toolbar-border-color: light-dark(rgb(184 184 184), rgb(12 12 13));
@@ -73,8 +75,10 @@
   --doorhanger-separator-color: light-dark(rgb(222 222 222), rgb(92 92 97));
   --dialog-button-border: none;
   --dialog-button-bg-color: light-dark(rgb(12 12 13 / 0.1), rgb(92 92 97));
-  --dialog-button-hover-bg-color: light-dark(rgb(12 12 13 / 0.3),
-      rgb(115 115 115));
+  --dialog-button-hover-bg-color: light-dark(
+    rgb(12 12 13 / 0.3),
+    rgb(115 115 115)
+  );
 
   --loading-icon: url(images/loading.svg);
   --toolbarButton-editorComment-icon: url(images/comment-editButton.svg);
@@ -120,7 +124,9 @@
   --secondaryToolbarButton-spreadNone-icon: url(images/secondaryToolbarButton-spreadNone.svg);
   --secondaryToolbarButton-spreadOdd-icon: url(images/secondaryToolbarButton-spreadOdd.svg);
   --secondaryToolbarButton-spreadEven-icon: url(images/secondaryToolbarButton-spreadEven.svg);
-  --secondaryToolbarButton-imageAltTextSettings-icon: var(--toolbarButton-editorStamp-icon);
+  --secondaryToolbarButton-imageAltTextSettings-icon: var(
+    --toolbarButton-editorStamp-icon
+  );
   --secondaryToolbarButton-documentProperties-icon: url(images/secondaryToolbarButton-documentProperties.svg);
   --editorParams-stampAddImage-icon: url(images/toolbarButton-zoomIn.svg);
   --comment-edit-button-icon: url(images/comment-editButton.svg);
@@ -249,7 +255,7 @@ body {
   cursor: none;
 }
 
-.pdfPresentationMode.pdfPresentationModeControls>*,
+.pdfPresentationMode.pdfPresentationModeControls > *,
 .pdfPresentationMode.pdfPresentationModeControls .textLayer span {
   cursor: default;
 }
@@ -409,7 +415,7 @@ body {
   background-color: var(--dialog-button-hover-bg-color);
 }
 
-.dialogButton:is(:hover, :focus-visible)>span {
+.dialogButton:is(:hover, :focus-visible) > span {
   color: var(--dialog-button-hover-color);
 }
 
@@ -548,7 +554,7 @@ body {
     background-color: var(--button-hover-color);
   }
 
-  &>input {
+  & > input {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -660,11 +666,11 @@ dialog::backdrop {
   background-color: rgb(0 0 0 / 0.2);
 }
 
-dialog>.row {
+dialog > .row {
   display: table-row;
 }
 
-dialog>.row>* {
+dialog > .row > * {
   display: table-cell;
 }
 
@@ -702,17 +708,17 @@ dialog :link {
   text-align: left;
 }
 
-#documentPropertiesDialog .row>* {
+#documentPropertiesDialog .row > * {
   min-width: 100px;
   text-align: start;
 }
 
-#documentPropertiesDialog .row>span {
+#documentPropertiesDialog .row > span {
   width: 125px;
   word-wrap: break-word;
 }
 
-#documentPropertiesDialog .row>p {
+#documentPropertiesDialog .row > p {
   max-width: 225px;
   word-wrap: break-word;
 }
@@ -725,7 +731,8 @@ dialog :link {
   cursor: grab !important;
 }
 
-.grab-to-pan-grab *:not(input):not(textarea):not(button):not(select):not(:link) {
+.grab-to-pan-grab
+  *:not(input):not(textarea):not(button):not(select):not(:link) {
   cursor: inherit !important;
 }
 
@@ -761,7 +768,7 @@ dialog :link {
   position: relative;
   padding: 0;
 
-  >span {
+  > span {
     display: inline-block;
     width: 0;
     height: 0;
@@ -837,7 +844,7 @@ dialog :link {
       color: var(--doorhanger-hover-color);
     }
 
-    >span {
+    > span {
       display: inline-block;
       width: max-content;
       height: auto;
@@ -852,7 +859,7 @@ dialog :link {
   position: relative;
   flex: none;
 
-  >.toolbarButton {
+  > .toolbarButton {
     width: 100%;
     height: 100%;
   }
@@ -863,7 +870,10 @@ dialog :link {
 
   .menuContainer {
     height: auto;
-    max-height: calc(var(--viewer-container-height) - var(--toolbar-height) - var(--doorhanger-height));
+    max-height: calc(
+      var(--viewer-container-height) - var(--toolbar-height) -
+        var(--doorhanger-height)
+    );
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -909,7 +919,7 @@ dialog :link {
       padding-inline: 10px;
       padding-block: 10px;
 
-      >.editorParamsSetter {
+      > .editorParamsSetter {
         min-height: 26px;
         display: flex;
         align-items: center;
@@ -961,7 +971,6 @@ dialog :link {
   max-height: calc(var(--viewer-container-height) - 40px);
 
   #secondaryToolbarButtonContainer {
-
     /*#if GENERIC*/
     #secondaryOpenFile::before {
       mask-image: var(--toolbarButton-openFile-icon);
@@ -1069,7 +1078,7 @@ dialog :link {
   flex-wrap: wrap;
   justify-content: flex-start;
 
-  >* {
+  > * {
     height: var(--toolbar-height);
     padding: var(--findbar-padding);
   }
@@ -1192,7 +1201,7 @@ dialog :link {
   }
 
   /* wrapper around (scaled) print canvas elements */
-  #printContainer>.printedPage {
+  #printContainer > .printedPage {
     page-break-after: always;
     page-break-inside: avoid;
 
@@ -1206,11 +1215,11 @@ dialog :link {
     align-items: center;
   }
 
-  #printContainer>.xfaPrintedPage .xfaPage {
+  #printContainer > .xfaPrintedPage .xfaPage {
     position: absolute;
   }
 
-  #printContainer>.xfaPrintedPage {
+  #printContainer > .xfaPrintedPage {
     page-break-after: always;
     page-break-inside: avoid;
     width: 100%;
@@ -1218,7 +1227,7 @@ dialog :link {
     position: relative;
   }
 
-  #printContainer>.printedPage :is(canvas, img) {
+  #printContainer > .printedPage :is(canvas, img) {
     /* The intrinsic canvas / image size will make sure that we fit the page. */
     max-width: 100%;
     max-height: 100%;
@@ -1252,7 +1261,7 @@ dialog :link {
   align-items: center;
   justify-content: center;
 
-  >label {
+  > label {
     width: 100%;
   }
 }
@@ -1292,7 +1301,7 @@ dialog :link {
     background-color: var(--button-hover-color);
   }
 
-  >select {
+  > select {
     appearance: none;
     width: inherit;
     min-width: inherit;
@@ -1307,7 +1316,7 @@ dialog :link {
     outline: none;
     background-color: var(--dropdown-btn-bg-color);
 
-    >option {
+    > option {
       background: var(--doorhanger-bg-color);
       color: var(--main-color);
     }
@@ -1358,7 +1367,7 @@ dialog :link {
     height: 100%;
     justify-content: space-between;
 
-    >* {
+    > * {
       flex: none;
     }
 
@@ -1418,13 +1427,15 @@ dialog :link {
         inset-inline-start: 0;
         height: 100%;
         width: calc(100% + 150px);
-        background: repeating-linear-gradient(135deg,
-            var(--progressBar-blend-color) 0,
-            var(--progressBar-bg-color) 5px,
-            var(--progressBar-bg-color) 45px,
-            var(--progressBar-color) 55px,
-            var(--progressBar-color) 95px,
-            var(--progressBar-blend-color) 100px);
+        background: repeating-linear-gradient(
+          135deg,
+          var(--progressBar-blend-color) 0,
+          var(--progressBar-bg-color) 5px,
+          var(--progressBar-bg-color) 45px,
+          var(--progressBar-color) 55px,
+          var(--progressBar-color) 95px,
+          var(--progressBar-blend-color) 100px
+        );
         animation: progressIndeterminate 1s linear infinite;
       }
     }
@@ -1452,7 +1463,6 @@ dialog :link {
 }
 
 @media all and (max-width: 690px) {
-
   .hiddenSmallView,
   .hiddenSmallView * {
     display: none !important;
@@ -1477,7 +1487,7 @@ dialog :link {
   position: fixed;
   z-index: 50000;
   border: 2px dashed #000;
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.2);
+  background-color: rgb(255 255 255 / 0.2);
+  box-shadow: 0 0 0 9999px rgb(0 0 0 / 0.2);
   pointer-events: none;
 }
