style: fix lint issues in annotation_layer_builder.css

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -44,7 +44,7 @@
         backdrop-filter: var(--hcm-highlight-filter);
       }
 
-      &>a:hover {
+      & > a:hover {
         opacity: 0 !important;
         background: none !important;
         box-shadow: none;
@@ -92,7 +92,6 @@
   }
 
   &.disabled {
-
     section,
     .popup {
       pointer-events: none;
@@ -141,11 +140,11 @@
     }
   }
 
-  .textLayer.selecting~& section {
+  .textLayer.selecting ~ & section {
     pointer-events: none;
   }
 
-  :is(.linkAnnotation, .buttonWidgetAnnotation.pushButton)>a {
+  :is(.linkAnnotation, .buttonWidgetAnnotation.pushButton) > a {
     position: absolute;
     font-size: 1em;
     top: 0;
@@ -154,7 +153,8 @@
     height: 100%;
   }
 
-  :is(.linkAnnotation, .buttonWidgetAnnotation.pushButton):not(.hasBorder)>a:hover {
+  :is(.linkAnnotation, .buttonWidgetAnnotation.pushButton):not(.hasBorder)
+    > a:hover {
     opacity: 0.2;
     background-color: rgb(255 255 0);
   }
@@ -328,7 +328,8 @@
   .popup {
     background-color: rgb(255 255 153);
     color: black;
-    box-shadow: 0 calc(2px * var(--total-scale-factor)) calc(5px * var(--total-scale-factor)) rgb(136 136 136);
+    box-shadow: 0 calc(2px * var(--total-scale-factor))
+      calc(5px * var(--total-scale-factor)) rgb(136 136 136);
     border-radius: calc(2px * var(--total-scale-factor));
     outline: 1.5px solid rgb(255 255 74);
     padding: calc(6px * var(--total-scale-factor));
@@ -348,16 +349,16 @@
     font-size: calc(9px * var(--total-scale-factor));
   }
 
-  .popup>.header {
+  .popup > .header {
     display: inline-block;
   }
 
-  .popup>.header>.title {
+  .popup > .header > .title {
     display: inline;
     font-weight: bold;
   }
 
-  .popup>.header .popupDate {
+  .popup > .header .popupDate {
     display: inline-block;
     margin-left: calc(5px * var(--total-scale-factor));
     width: fit-content;
@@ -369,7 +370,7 @@
     padding-top: calc(2px * var(--total-scale-factor));
   }
 
-  .richText>* {
+  .richText > * {
     white-space: pre-wrap;
     font-size: calc(9px * var(--total-scale-factor));
   }
