--- a/web/text_layer_builder.css
+++ b/web/text_layer_builder.css
@@ -18,13 +18,17 @@
   text-align: initial;
   inset: 0;
   overflow: clip;
-  opacity: 1;
+  opacity: 0.25;
   line-height: 1;
   text-size-adjust: none;
   forced-color-adjust: none;
   transform-origin: 0 0;
   caret-color: CanvasText;
   z-index: 0;
+
+  @media screen and (forced-colors: active) {
+    opacity: 1;
+  }
 
   &.highlighting {
     touch-action: none;
@@ -50,13 +54,13 @@
   .markedContent span:not(.markedContent) {
     z-index: 1;
 
-    --font-height: 0; /* set by text_layer.js */
+    --font-height: 0;
+    /* set by text_layer.js */
     font-size: calc(var(--text-scale-factor) * var(--font-height));
 
     --scale-x: 1;
     --rotate: 0deg;
-    transform: rotate(var(--rotate)) scaleX(var(--scale-x))
-      scale(var(--min-font-size-inv));
+    transform: rotate(var(--rotate)) scaleX(var(--scale-x)) scale(var(--min-font-size-inv));
   }
 
   .markedContent {
@@ -69,8 +73,8 @@
   }
 
   .highlight {
-    --highlight-bg-color: rgb(180 0 170 / 0.25);
-    --highlight-selected-bg-color: rgb(0 100 0 / 0.25);
+    --highlight-bg-color: rgb(180 0 170);
+    --highlight-selected-bg-color: rgb(0 100 0);
     --highlight-backdrop-filter: none;
     --highlight-selected-backdrop-filter: none;
 
@@ -78,9 +82,7 @@
       --highlight-bg-color: transparent;
       --highlight-selected-bg-color: transparent;
       --highlight-backdrop-filter: var(--hcm-highlight-filter);
-      --highlight-selected-backdrop-filter: var(
-        --hcm-highlight-selected-filter
-      );
+      --highlight-selected-backdrop-filter: var(--hcm-highlight-selected-filter);
     }
 
     margin: -1px;
@@ -114,10 +116,11 @@
   ::selection {
     /* stylelint-disable declaration-block-no-duplicate-properties */
     /*#if !MOZCENTRAL*/
-    background: rgba(0 0 255 / 0.25);
+    background: rgba(0 0 255);
     /*#endif*/
     /* stylelint-enable declaration-block-no-duplicate-properties */
-    background: color-mix(in srgb, AccentColor, transparent 75%);
+    background: AccentColor;
+    color: transparent;
   }
 
   /* Avoids https://github.com/mozilla/pdf.js/issues/13840 in Chrome */
@@ -125,6 +128,7 @@
   br::selection {
     background: transparent;
   }
+
   /*#endif*/
 
   .endOfContent {
