Fix the sidebar resizer accessibility
It's width was a bit wrong because of its box-sizing property and it was causing some issues when resizing it with the keyboard.
And for the thumbnails sidebar, the tabindex was missing and some aria properties too.

--- a/web/sidebar.css
+++ b/web/sidebar.css
@@ -48,6 +48,7 @@
   min-width: var(--sidebar-min-width);
   max-width: var(--sidebar-max-width);
   backdrop-filter: var(--sidebar-backdrop-filter);
+  box-sizing: border-box;
 
   .sidebarResizer {
     width: var(--resizer-width);
